Fix field inputs wrapping to next line

--- a/src/media/css/forms.styl
+++ b/src/media/css/forms.styl
@@ -282,7 +282,7 @@ label [value]:invalid ~ [reason=invalid] {
     form, p {
         display: block;
     }
-    label + form,
+    label + p + form,
     label + p {
         width: 80%;
         margin-left: 20%;
